--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
-}
+} *
 
 .wave {
 	animation-name: wave-animation; /* Refers to the name of your @keyframes element below */
