completed mobile view

--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,11 @@
   background-size: cover;
 }*/
 
+.show-container{
+  display: flex;
+  height: 100vh;
+}
+
 .main, .about, .projects{
   background: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9)), url(./assets/girl.jpeg);
   background-repeat: no-repeat;
@@ -63,7 +68,6 @@ a:hover {
 }
 
 ul{
-  width: 50%;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -126,13 +130,6 @@ button:focus-visible {
     animation: animate 1s linear infinite;
 }
 
-#logo{
-  width: 100%;
-  margin: auto;
-  margin-top: 2em;
-  margin-bottom: 2em;
-}
-
 .blue{
   color: #646cff;
 }
@@ -148,14 +145,6 @@ button:focus-visible {
 
 .skills{
   flex-direction: column;
-}
-
-.info > img {
-  width: 40%;
-}
-
-.info > aside {
-  width: 50%;
 }
 
 .icons, .tools{
@@ -213,26 +202,24 @@ button:focus-visible {
 }
 
 .edu-box{
-    display: flex;
-    box-shadow: 4px 5px 4px 3px #171651 !important;
-    opacity: 0.93 !important;
-    border: 1.7px solid #646cff !important;
-    overflow: hidden !important;
-    transition: all 0.4s ease 0s !important;
-    border-radius: 5px !important;
-    width: 45%;
-    margin-top: 1em;
+  display: flex;
+  box-shadow: 4px 5px 4px 3px #171651 !important;
+  opacity: 0.93 !important;
+  border: 1.7px solid #646cff !important;
+  overflow: hidden !important;
+  transition: all 0.4s ease 0s !important;
+  border-radius: 5px !important;
 }
 
 .date{
-    background-color: #1b1c54;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    width: 45%;
-    color: #fff;
+  background-color: #1b1c54;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  width: 45%;
+  color: #fff;
 }
 
 .edu-name{
@@ -248,17 +235,6 @@ button:focus-visible {
   height: 200px;
   transition: .5s ease;
   backface-visibility: hidden;
-}
-
-.projlink{
-  display: flex;
-  justify-content: space-between;
-  width: 6em;
-  font-size: 15px;
-  color: goldenrod;
-  align-items: center;
-  margin-top: 1em;
-  margin-right: 2em;
 }
 
 .extra {
@@ -286,7 +262,6 @@ button:focus-visible {
 
 .project {
   position: relative;
-  width: 30%;
   margin-top: 1em;
   background-color: transparent;
   box-shadow: 2px 2px 2px black;
@@ -294,9 +269,9 @@ button:focus-visible {
   border-radius: 5px;
 }
 
-.projlinks{
+/*.projlinks{
   margin-top: 10px;
-}
+} */
 
 .project:hover .image {
   opacity: 0.1;
@@ -328,9 +303,6 @@ button:focus-visible {
 
 .footertop, .footerbottom{
   display: flex;
-  justify-content: space-between;
-  width: 80%;
-  margin: auto;
 }
 
 .footertop > p {
@@ -395,4 +367,143 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+@media screen and (max-width: 768px) {
+  
+  #sidebar, #pic2, #pic3{
+    display: none;
+  }
+
+  .main{
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  }
+
+  .show-container{
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .navbar, .navbar1{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  article{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: 80%;
+    margin: auto;
+  }
+
+  .heading, .heading-name{
+    font-size: 30px;
+    text-align: center;
+  }
+
+  .info{
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .info > img {
+    width: 60%;
+  }
+  
+  .info > aside {
+    width: 90%;
+    margin: auto;
+    margin-top: 2em;
+  }
+
+  .icons, .tools{
+    flex-wrap: wrap;
+  }
+
+  .edu{
+    flex-direction: column;
+  }
+
+  .edu-box{
+    margin-top: 2em;
+  }
+
+  .footertop, .footerbottom{
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+    margin: auto;
+    margin-bottom: 1em;
+  }
+
+  .footertop{
+    text-align: left;
+  }
+
+  .project {
+    width: 90%;
+    margin: auto;
+    margin-top: 1em;
+  }
+
+  .extra {
+    top: 6.4em;
+    left: 11.6em;
+  }
+  
+}
+
+@media screen and (min-width: 769px) {
+  
+  #pic1, .navbar1, #pic4{
+    display: none;
+  }
+
+  #logo{
+    width: 100%;
+    margin: auto;
+    margin-top: 2em;
+    margin-bottom: 2em;
+  }
+
+  .navbar{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .info > img {
+    width: 40%;
+  }
+  
+  .info > aside {
+    width: 50%;
+  }
+
+  ul{
+    width: 50%;
+  }
+
+  .edu-box{
+    width: 45%;
+    margin-top: 1em;
+  }
+
+  .footertop, .footerbottom{
+    justify-content: space-between;
+    width: 80%;
+    margin: auto;
+  }
+
+  .project {
+    width: 30%;
+  }
+  
 }
